--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <li><a href="">ABOUT</a></li>
       <li><a href="">PORTFOLIO</a></li>
       <li><a href="">HIRE ME</a></li>
-
     </ul>
+    <img src="./images/dark_mode_24dp_F19E39_FILL0_wght400_GRAD0_opsz24.png" id="icon">
   </nav>
   <div class="info">
     <h1>I'm <span>Ishami </span> Gaelle Bega</h1>
@@ -35,9 +35,21 @@
  <a href=""> <i class="fab fa-linkedin"></i></a> 
  <a href=""> <i class="fab fa-behance"></i></a> 
  <a href=""> <i class="fab fa-dribbble"></i></a> 
-
+<img src="./images/brightness_5_24dp_F19E39_FILL0_wght400_GRAD0_opsz24.png"
   </div>
 </div>
+<script>
+var  icon = document.getElementById("icon");
+icon.onclick = function(){
+  document.body.classList.toggle("dark-theme");
+  if(document.body.classList("dark-theme")){
+    icon.src="./images/dark_mode_24dp_F19E39_FILL0_wght400_GRAD0_opsz24.png";
+   } else{
+    icon.src="./images/brightness_5_24dp_F19E39_FILL0_wght400_GRAD0_opsz24.png";
+    }
+  
+}
+</script>
 </body>
 </html>
 
